<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">




    <EditText
        android:id="@+id/et_name"
        android:layout_width="359dp"
        android:layout_height="41dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_Email"
        android:layout_width="361dp"
        android:layout_height="52dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_Num"
        android:layout_width="359dp"
        android:layout_height="41dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/numero"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Email"
        app:layout_constraintVertical_bias="0.0" />






    <EditText
        android:id="@+id/et_Pass"
        android:layout_width="362dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Num"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/et_PassCom"
        android:layout_width="361dp"
        android:layout_height="44dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/pass_comp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Pass" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="330dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_PassCom"
        app:layout_constraintVertical_bias="0.002"
        tools:orientation="vertical">

        <RadioButton
            android:id="@+id/et_Masculino"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/Mascu" />

        <RadioButton
            android:id="@+id/et_Femenino"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Fem"


            />


    </RadioGroup>

    <CheckBox
        android:id="@+id/cb_Leer"
        android:layout_width="73dp"
        android:layout_height="35dp"
        android:text="Leer"
        app:layout_constraintEnd_toStartOf="@+id/cb_cine"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/cb_Nadar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"

        android:text="Nadar"
        app:layout_constraintBottom_toTopOf="@+id/showPicker"
        app:layout_constraintEnd_toStartOf="@+id/cb_Trotar"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_Leer"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/cb_cine"
        android:layout_width="71dp"
        android:layout_height="34dp"
        android:layout_marginEnd="152dp"
        android:text="Cine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/cb_Trotar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"

        android:layout_marginEnd="148dp"
        android:text="@string/Trotar"
        app:layout_constraintBottom_toTopOf="@+id/showPicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_cine"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/showPicker"
        android:layout_width="141dp"
        android:layout_height="29dp"
        android:layout_marginTop="152dp"
        android:text="@string/Fecha"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_PassCom" />

    <Spinner
        android:id="@+id/mySpinner"
        android:layout_width="144dp"
        android:layout_height="34dp"
        android:layout_marginTop="12dp"
        android:entries="@array/City_list"
        android:text="@string/CIUDADES"
        app:layout_constraintTop_toBottomOf="@+id/showPicker"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/et_registro"
        android:layout_width="145dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:text="Registrar"
        app:layout_constraintTop_toBottomOf="@+id/mySpinner"
        tools:layout_editor_absoluteX="-4dp" />

    <TextView
        android:id="@+id/et_result"
        android:layout_width="198dp"
        android:layout_height="154dp"
        android:text="..."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toEndOf="@+id/et_registro" />




</androidx.constraintlayout.widget.ConstraintLayout>